--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 alembic==1.4.2
 astroid==2.4.2
+Babel==2.8.0
 blinker==1.4
+certifi==2020.6.20
 click==7.1.2
 dnspython==1.16.0
 dominate==2.5.1
+elasticsearch==7.8.1
 email-validator==1.1.1
 Flask==1.1.2
+Flask-Babel==1.0.0
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
@@ -13,6 +17,7 @@ Flask-Migrate==2.5.3
 Flask-Moment==0.10.0
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
+guess-language-spirit==0.5.3
 idna==2.10
 isort==4.3.21
 itsdangerous==1.1.0
@@ -28,10 +33,12 @@ pylint-plugin-utils==0.6
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
+pytz==2020.1
 six==1.15.0
 SQLAlchemy==1.3.18
 toml==0.10.1
 typed-ast==1.4.1
+urllib3==1.25.10
 visitor==0.1.3
 Werkzeug==1.0.1
 wrapt==1.12.1
